# lixue

./: .coveragerc  .gitignore  AGENTS.md  Makefile  conftest.py  flake.nix  justfile  pyproject.toml  queries.sql  schema.sql  sqlc.yaml
.github/workflows/: build.yaml  python.yaml
.opencode/skill/database-migration-creation/: SKILL.md
.opencode/skill/database-query-writing/: SKILL.md
.opencode/skill/python-test-writing/: SKILL.md
cli/: __main__.py  __main___test.py
foundation/: database.py  database_test.py
lixue-cards/: default.nix  setup.py
lixue-cards/lixue_cards/: __init__.py  __main__.py  cli.py  config.py  config_test.py  notes.py
migrations/: 0001_initial.py  0001_initial.sql
scripts/: database-migrate.py
tools/codegen_db/: __main__.py
tools/codegen_db_plugin/: __main__.py  codegen.proto  proto.py
