[project]
requires-python = ">= 3.13"

[tool.ruff]
line-length = 120
preview = true
src = ["."]
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  ".direnv",
  "**/__codegen__",
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pep8-naming
  "N",
  # flake8-unused-arguments
  "ARG",
  # pyupgrade
  "UP",
  # flake-bugbear
  "B",
  # flake8-builtins
  "A",
  # isort
  "I",
  # flake8-comprehensions
  "C4",
  # flake8-import-conventions
  "ICN",
  # flake8-pytest-style
  "PT",
  # flake8-simplify
  "SIM",
  # flake8-use-pathlib
  "PTH",
  # flake8-self
  "SLF",
  # flake8-slots
  "SLOT",
  # flake8-print
  "T20",
  # ruff-specific
  "RUF",
]
ignore = [
  # Allow shadowing builtins on attributes.
  "A003",
  # Do not enforce max line length via linter.
  "E501",
  # if-else-block-instead-of-if-exp: overcomplicated code.
  "SIM108",
]
unfixable = [
  # Remove unused variables.
  "F841",
]

[tool.ruff.lint.per-file-ignores]
# Ignore unused arguments in test files (pytest fixtures).
"*test*.py" = ["ARG001"]

[tool.pytest.ini_options]
norecursedirs = [".venv", ".*_cache", "__pycache__", ".direnv", "**/__codegen__"]
addopts = [
  "--cov=.",
  "--cov-branch",
  "--import-mode=importlib",
]
timeout = 15
pythonpath = "."
python_files = ["**/*_test.py"]
