[project]
name = "lixue"
version = "0.1.0"
requires-python = ">= 3.13"

[tool.ruff]
line-length = 240
preview = true
target-version = "py313"
exclude = [
  ".venv",
  ".*_cache",
  ".direnv",
  "**/__codegen__",
  "./tools/codegen_db_plugin/proto.py",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle error
  "W",    # pycodestyle warning
  "F",    # pyflakes
  "I",    # isort
  "U",    # pyupgrade
  "B",    # bugbear
  "C4",   # flake8-comprehensions
  "ISC",  # flake8-implicit-str-concat
  "ICN",  # flake8-import-conventions
  "PIE",  # flake8-pie
  "RSE",  # flake8-raise
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "TID",  # flake8-tidy-imports
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
  "RUF",  # ruff
  "INP",  # flake8-no-pep420
  "T20",  # flake8-print
  "PTH",  # flake8-use-pathlib
  "PT",   # flake8-pytest-style
]
ignore = [
  # Line too long; if it can't be autoformatted, nbd.
  "E501",
  # Undefined variables; avoid doubling up with type checker.
  "F821",
  # ambiguous-unicode-character-string, many false positives.
  "RUF001",
  # Require async feature use within async functions.
  "RUF029",
  # if-else-block-instead-of-if-exp, overcomplicated code.
  "SIM108",
  # Unreliable float equality; test assertions with float literals are intentional.
  "RUF069",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Ignore unused arguments in test files (pytest fixtures).
"*test*.py" = ["ARG001"]

[tool.pytest.ini_options]
norecursedirs = [".venv", ".*_cache", "__pycache__", ".direnv", "**/__codegen__"]
addopts = [
  "--cov=.",
  "--cov-branch",
  "--cov-report=",
  "--import-mode=importlib",
  "--durations=10",
]
timeout = 15
pythonpath = "."
python_files = ["**/*_test.py"]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["__codegen__/*", "result/*", "/nix/store/*"]

[tool.coverage.report]
omit = ["__codegen__/*", ".venv/*", ".direnv/*"]
